# redis-ai-resources

./: .gitignore  08_vector_algorithm_benchmark.py  Dockerfile  MIGRATION_NOTEBOOKS_SUMMARY.md  NOTEBOOK_TEST_RESULTS.md  README.md  README_edit.md  REFERENCE_AGENT_SETUP.md  code-of-conduct.md  contributing.md  demo_oregon_trail.py  docker-compose.yml  pyproject.toml  requirements.txt  run_notebook_test.sh  section-1-improvements.md  setup_movie_data.py  test_migration_notebook.py  test_notebook_cells.py  test_oregon_trail_basic.py  test_reference_agents.py  test_requirements.txt  test_setup_only.py
.github/: ignore-notebooks.txt
python-recipes/context-engineering/reference-agent/: .env.example  AGENT_TEST_PLAN.md  AGENT_TEST_REPORT.md  FILTER_IMPROVEMENTS.md  HIERARCHICAL_RETRIEVAL_IMPLEMENTATION.md  INSTALL.md  INVESTIGATION_GUIDE.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  SETUP_MEMORY_SERVER.md  SETUP_PLAN.md  TESTING_GUIDE.md  course_catalog.json  course_catalog_clean.json  course_catalog_unique.json  debug_agent.py  demo.py  example_user_knowledge_summary.py  filter_demo.py  final_test.py  generate_unique_courses.py  pyproject.toml  requirements.txt  setup.py  setup_agent_memory_server.py  setup_agent_memory_server.sh  simple_check.py  simple_health_check.py  system_health_check.py  test_agent.py  test_full_setup.py  test_user_knowledge_tool.py  test_working_memory.py  verify_courses.py
python-recipes/context-engineering/reference-agent/archive/original_agent/: README.md
python-recipes/context-engineering/reference-agent/examples/: advanced_agent_example.py  basic_usage.py
python-recipes/context-engineering/reference-agent/progressive_agents/: HIERARCHICAL_RETRIEVAL_COMPARISON.md  LOGGING_AND_INTENT_UPDATES.md  README.md  README_UPDATES.md  SEARCH_PARAMETERS.md  STAGE4_VS_STAGE5_COMPARISON.md  STAGE6_DESIGN.md  STAGE6_QUICK_REFERENCE.md  STAGE7_QUICK_REFERENCE.md  STAGE7_REACT_DESIGN.md
python-recipes/context-engineering/reference-agent/progressive_agents/stage1_baseline/: README.md  agent.py  agent_langgraph.py  cli.py  notebook.ipynb
python-recipes/context-engineering/reference-agent/progressive_agents/stage1_baseline_rag/: README.md  cli.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage1_baseline_rag/agent/: __init__.py  nodes.py  setup.py  state.py  workflow.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage2_context_engineered/: README.md  cli.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage2_context_engineered/agent/: __init__.py  context_engineering.py  nodes.py  setup.py  state.py  workflow.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage2_optimized/: README.md  agent.py  agent_langgraph.py  cli.py  context_utils.py  notebook.ipynb
python-recipes/context-engineering/reference-agent/progressive_agents/stage3_full_agent_without_memory/: AGENTIC_IMPLEMENTATION_SUMMARY.md  INTENT_CLASSIFICATION_UPDATE.md  README.md  cli.py  debug_search.py  test_linear_algebra.py  test_simple.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage3_full_agent_without_memory/agent/: __init__.py  edges.py  nodes.py  setup.py  state.py  tools.py  workflow.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage3_hybrid/: README.md  agent.py  cli.py  notebook.ipynb  structured_views.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage4_advanced/: README.md  agent.py  cli.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage4_hybrid_search_with_ner/: AGENTIC_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  STAGE4_NER_HYBRID_SEARCH.md  test_linear_algebra.py  test_simple.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage4_hybrid_search_with_ner/agent/: __init__.py  nodes.py  state.py  tools.py  workflow.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage5_memory_augmented/: IMPLEMENTATION_SUMMARY.md  README.md  SEARCH_STRATEGY_ANALYSIS.md  test_agent_intents.py  test_linear_algebra.py  test_simple.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage5_memory_augmented/agent/: nodes.py  tools.py  workflow.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage5_react_memory/: TEST_RESULTS.md  cli.py  test_exact_match.py  test_exact_match_react.py  test_react_multi_turn.py  test_react_simple.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage5_react_memory/agent/: __init__.py  react_agent.py  react_prompts.py  state.py  tools.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage6_longterm_memory/: cli.py  debug_search.py  test_memory_tools.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage6_longterm_memory/agent/: nodes.py  tools.py
python-recipes/context-engineering/reference-agent/progressive_agents/stage7_react_loop/: README.md  cli.py  test_exact_match.py  test_react_intents.py  test_react_linear_algebra.py  test_react_multi_turn.py  test_react_simple.py  test_simple_memory.py
python-recipes/context-engineering/reference-agent/redis_context_course/: __init__.py  agent.py  augmented_agent.py  cli.py  course_manager.py  hierarchical_context.py  hierarchical_manager.py  hierarchical_models.py  memory.py  memory_client.py  models.py  optimization_helpers.py  redis_config.py  semantic_tool_selector.py  tools.py  working_memory.py  working_memory_tools.py
python-recipes/context-engineering/reference-agent/redis_context_course/scripts/: __init__.py  generate_courses.py  generate_hierarchical_courses.py  ingest_courses.py  load_hierarchical_courses.py
python-recipes/context-engineering/reference-agent/tests/: __init__.py  conftest.py  test_agent_chat.py  test_agent_tool_path.py  test_package.py  test_tools.py
(+376 files in other folders)
